test: provide unit test for article handler
